CSS fixes on horizontal overflow

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,8 +2,11 @@
 @tailwind components;
 @tailwind utilities;
 
+html,
 body {
   font-family: Roboto, Arial, Helvetica, sans-serif;
+  overflow-x: hidden;
+  max-width: 100vw;
 }
 
 .text-destructive {
